[gd_scene load_steps=8 format=2]

[ext_resource path="res://script/bullet.gd" type="Script" id=1]
[ext_resource path="res://scene/DepthController.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/particles/AttackHit.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/particles/BulletTrail.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 2 )

[sub_resource type="OpenSimplexNoise" id=2]

[sub_resource type="NoiseTexture" id=3]
width = 8
height = 4
noise = SubResource( 2 )

[node name="Bullet" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="AttackHit" parent="." instance=ExtResource( 3 )]
rotation = 3.14159
z_index = 20
emitting = false
amount = 10
lifetime = 2.0
one_shot = true
spread = 10.0
scale_amount = 0.4

[node name="BulletTrail" parent="." instance=ExtResource( 4 )]
rotation = 3.14159
randomness = 0.07
scale_amount = 0.1
__meta__ = {
"_editor_description_": "	"
}

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 3 )

[node name="DepthController" parent="." instance=ExtResource( 2 )]

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
